--- a/class-component/src/ErrorBoundary.module.css
+++ b/class-component/src/ErrorBoundary.module.css
@@ -12,3 +12,23 @@
     font-size: 18px;
     margin-top: 10px;
 }
+
+.triggerButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #fd2b2b;
+    color: #222;
+    font-family: 'Star Jedi', Arial, sans-serif;
+    font-size: 10px;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.triggerButton:hover {
+    background-color: #ff5656;
+    color: #727272;
+}
