--- a/class-component/src/SearchInput.module.css
+++ b/class-component/src/SearchInput.module.css
@@ -26,6 +26,7 @@
     font-family: 'Star Jedi', Arial, sans-serif;
     font-size: 16px;
     cursor: pointer;
+    transition: all 0.2s;
 }
 
 .button:hover {
