fix: fix problems

--- a/class-component/src/index.css
+++ b/class-component/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Star Jedi';
-    src: url('/fonts/starjedi_cyrillic.otf') format('opentype');
+    src: url('/fonts/star-wars.otf') format('opentype');
 }
 
 :root {
