--- a/class-component/src/App.css
+++ b/class-component/src/App.css
@@ -4,8 +4,11 @@
 }
 
 body {
-    /*background-color: #000;*/
-    background-image: url('../public/images/photorealistic-dark-blur-background-for-star-wars-.png');
-    color: #ffcc00;
-    font-family: Arial, sans-serif;
+    background-color: #000936;
+    background-image: url('../public/images/photorealistic-background-for-star-wars-style-webs.png');
+}
+
+body * {
+    /*color: #ffcc00;*/
+    font-family: 'Star Jedi', Arial, sans-serif;
 }
