--- a/class-component/src/components/SearchResults/SearchResults.module.css
+++ b/class-component/src/components/SearchResults/SearchResults.module.css
@@ -3,7 +3,7 @@
     padding: 20px;
     border: 2px solid #ffcc00;
     border-radius: 5px;
-    background-image: url('../public/images/photorealistic-dark-blur-background-for-star-wars-.png');
+    background-image: url('../../../public/images/photorealistic-dark-blur-background-for-star-wars-.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
