--- a/class-component/src/App.css
+++ b/class-component/src/App.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #000936;
+    /*background-color: #000936;*/
     background-image: url('../public/images/photorealistic-background-for-star-wars-style-webs.png');
 }
 
