--- a/class-component/src/components/Character/CharacterCard.module.css
+++ b/class-component/src/components/Character/CharacterCard.module.css
@@ -3,7 +3,7 @@
     border: 1px solid #ffcc00;
     border-radius: 10px;
     background-color: #222;
-    color: #fff;
+    /*color: #fff;*/
     display: flex;
     flex-direction: column;
 }
