--- a/class-component/src/components/SearchResults/SearchResults.module.css
+++ b/class-component/src/components/SearchResults/SearchResults.module.css
@@ -7,7 +7,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    color: #ffcc00;
+    /*color: #ffcc00;*/
 }
 
 .grid {
