feat: The biggest update

--- a/class-component/src/components/Character/CharacterCard.module.css
+++ b/class-component/src/components/Character/CharacterCard.module.css
@@ -6,6 +6,12 @@
     /*color: #fff;*/
     display: flex;
     flex-direction: column;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.card:hover {
+    transform: scale(1.05);
 }
 
 .card-header {
