--- a/class-component/src/components/SearchResults/SearchResults.module.css
+++ b/class-component/src/components/SearchResults/SearchResults.module.css
@@ -1,5 +1,6 @@
 .container {
-    margin-top: 20px;
+    height: 100%;
+    margin: 20px 10px;
     padding: 20px;
     border: 2px solid #ffcc00;
     border-radius: 5px;
@@ -7,7 +8,6 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    /*color: #ffcc00;*/
 }
 
 .grid {
