--- a/class-component/src/pages/Details.module.css
+++ b/class-component/src/pages/Details.module.css
@@ -1,6 +1,40 @@
 .content {
     display: flex;
 }
+
 .details {
-    margin-left: 20px;
+    margin: 20px 10px;
+    padding: 20px;
+    border: 2px solid #ffcc00;
+    border-radius: 5px;
+    background-color: #222222;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.character-image {
+    width: 100%;
+    height: 100%;
+    max-width: 400px;
+    max-height: 400px;
+    border-radius: 20%;
+    border: 2px solid yellow;
+}
+
+.details button {
+    background-color: #ffcc00;
+    color: #222222;
+    border: none;
+    border-radius: 3px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.details button:hover {
+    background-color: #e6b800;
 }
