--- a/class-component/src/components/SearchInput/SearchInput.module.css
+++ b/class-component/src/components/SearchInput/SearchInput.module.css
@@ -5,25 +5,13 @@
     margin-top: 20px;
 }
 
-.link {
-    color: white;
-}
-
-.link:hover {
-    color: #ffdd22;
-}
-
-.link:visited {
-    color: white;
-}
-
 .input {
     width: 300px;
     padding: 10px;
     border-radius: 5px;
-    border: 2px solid #ffcc00;
+    border: 2px solid var(--border);
     background-color: #222;
-    color: #ffcc00;
+    color: var(--header);
     font-size: 16px;
 }
 
@@ -32,7 +20,7 @@
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #ffcc00;
+    background-color: var(--primary);
     color: #222;
     font-size: 16px;
     cursor: pointer;
@@ -40,5 +28,5 @@
 }
 
 .button:hover {
-    background-color: #ffdd22;
+    background-color: var(--secondary);
 }
