--- a/class-component/src/components/SearchResults/SearchResults.module.css
+++ b/class-component/src/components/SearchResults/SearchResults.module.css
@@ -1,10 +1,15 @@
+:root {
+    --background-image: url('../../../public/images/photorealistic-dark-blur-background-for-star-wars.png');
+}
+
 .container {
     height: 100%;
     margin: 20px 10px;
     padding: 20px;
-    border: 2px solid #ffcc00;
+    /*border: 2px solid #ffcc00;*/
+    border: 2px solid var(--border);
     border-radius: 5px;
-    background-image: url('../../../public/images/photorealistic-dark-blur-background-for-star-wars-.png');
+    background-image: var(--main-bg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
