--- a/class-component/src/pages/Details/Details.module.css
+++ b/class-component/src/pages/Details/Details.module.css
@@ -5,9 +5,9 @@
 .details {
     margin: 20px 10px;
     padding: 20px;
-    border: 2px solid #ffcc00;
+    border: 2px solid var(--border);
     border-radius: 5px;
-    background-color: #222222;
+    background-color: var(--background);
 }
 
 .container {
@@ -17,18 +17,22 @@
     align-items: center;
 }
 
+.result-name {
+    color: var(--header);
+}
+
 .character-image {
     width: 100%;
     height: 100%;
     max-width: 400px;
     max-height: 400px;
     border-radius: 20%;
-    border: 2px solid yellow;
+    border: 2px solid var(--border);
 }
 
 .details button {
-    background-color: #ffcc00;
-    color: #222222;
+    background-color: var(--primary);
+    color: var(--text);
     border: none;
     border-radius: 3px;
     padding: 10px;
@@ -36,5 +40,5 @@
 }
 
 .details button:hover {
-    background-color: #e6b800;
+    background-color: var(--secondary);
 }
