--- a/class-component/src/index.css
+++ b/class-component/src/index.css
@@ -26,6 +26,7 @@
     --background: #d1d5db;
     --border: #a3e635;
     --main-bg: url('../public/images/photorealistic-light-blur-background-for-star-wars.png');
+    --details-bg: url('../public/images/details-white-background.png');
 }
 
 * {
