--- a/class-component/src/pages/HomePage/HomePage.css
+++ b/class-component/src/pages/HomePage/HomePage.css
@@ -1,4 +1,5 @@
 .home-page {
+    height: calc(100vh - 110px);
     display: flex;
     flex-direction: column;
 }
@@ -19,8 +20,10 @@
 
 .content {
     display: flex;
+    flex-direction: row;
+    flex-grow: 1;
 }
 
-.content > * {
-    flex: 1;
-}
+/*.content > * {*/
+/*    flex: 1;*/
+/*}*/
