--- a/class-component/src/pages/HomePage/HomePage.css
+++ b/class-component/src/pages/HomePage/HomePage.css
@@ -2,6 +2,7 @@
     height: calc(100vh - 110px);
     display: flex;
     flex-direction: column;
+    background-color: var(--transparent);
 }
 
 .toggle-theme-button {
