--- a/class-component/src/components/SearchResults/SearchResults.module.css
+++ b/class-component/src/components/SearchResults/SearchResults.module.css
@@ -1,5 +1,6 @@
 .container {
-    max-width: 60%;
+    /*max-width: 60%;*/
+    flex: 4;
     margin: 20px 10px;
     padding: 20px;
     border: 2px solid var(--border);
@@ -8,6 +9,9 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .grid {
