--- a/class-component/src/pages/Details/Details.module.css
+++ b/class-component/src/pages/Details/Details.module.css
@@ -13,7 +13,8 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    flex-grow: 1;
+    /*flex-grow: 1;*/
+    flex: 3;
 }
 
 /*.content {*/
