feat: Add tests for components Loader, NotFound

--- a/class-component/src/components/App/App.css
+++ b/class-component/src/components/App/App.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-image: url('../public/images/photorealistic-background-for-star-wars-style-webs.png');
+    background-image: url('../../../public/images/photorealistic-background-for-star-wars-style-webs.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
