--- a/nextjs-ssr-pages-api/src/components/HomePage/HomePage.module.css
+++ b/nextjs-ssr-pages-api/src/components/HomePage/HomePage.module.css
@@ -1,11 +1,8 @@
-.header {
-    width: 100%;
-    height: 60px;
-    padding: 0 20px;
-    border-bottom: 1px solid var(--primary);
-    background-color: var(--background);
+.home-page {
+    height: calc(100vh - 110px);
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    background-color: var(--transparent);
 }
 
 .toggle-theme-button {
@@ -20,4 +17,10 @@
 
 .toggle-theme-button:hover {
     background-color: var(--secondary);
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
 }
